--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 *.pdf
 # who even needs cache?
 simulator/__pycache__
-simulator/k8/__pycache__
+simulator/k8/__pycache__/*
+simulator/k8/__pycache__/algorithm.cpython-312.pyc
