--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
 # we don't like pdf
 *.pdf
 # who even needs cache?
-simulator/__pycache__
-simulator/k8/__pycache__/*
-simulator/k8/__pycache__/algorithm.cpython-312.pyc
-simulator/simmath/__pycache__
-simulator/k8/__pycache__
-
+**/__pycache__**
