--- a/simulator/deploy/compose.yml
+++ b/simulator/deploy/compose.yml
@@ -4,6 +4,8 @@ services:
     image: "mysql:latest"
     ports:
       - "3306:3306"
+    volumes:
+      - ./sql_data:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
   adminer:
@@ -12,5 +14,7 @@ services:
       - "8000:8080"
   grafana:
     image: "grafana/grafana:latest"
+    volumes:
+      - ./grafana_data:/var/lib/grafana
     ports:
       - "3000:3000"
