--- a/k8_deployment/playbook.yml
+++ b/k8_deployment/playbook.yml
@@ -1,5 +1,5 @@
 - name: Install Docker
-  hosts: manager_group
+  hosts: all
   tasks:
     - name: Uninstall conflicting packages
       become: true
@@ -17,5 +17,27 @@
     - name: Add user to docker group
       become: true
       shell: usermod -aG docker {{ ansible_user }}
+
+- name: Install k3s manager
+  hosts: manager_group
+  tasks:
     - name: Install k3s
       shell: curl -sfL https://get.k3s.io | sh -
+    - name: Extract join token from output
+      become: true
+      register: join_token
+      shell: cat /var/lib/rancher/k3s/server/node-token
+      
+- name: Install k3s worker
+  hosts: worker_group
+  tasks:
+    - name: Install k3s
+      shell: curl -sfL https://get.k3s.io | K3S_URL=https://{{ hostvars["k8-manager-0"]["ansible_host"]}}:6443 K3S_TOKEN={{ hostvars["k8-manager-0"]["join_token"].stdout }} sh -
+- name: Copy k3s config
+  hosts: k8-manager-0
+  tasks:
+    - name: Copy k3s config
+      become: true
+      fetch: 
+        src=/etc/rancher/k3s/k3s.yaml 
+        dest=k3s.yaml
