--- a/k8_deployment/deployment.yml
+++ b/k8_deployment/deployment.yml
@@ -18,5 +18,9 @@ spec:
       containers:
       - name: nginx
         image: nginx:1.21.6
+        env:
+        - name: RequireCom
+          value: ""
+        
         ports:
         - containerPort: 80
