--- a/k8_deployment/deployments/server-deployment.yml
+++ b/k8_deployment/deployments/server-deployment.yml
@@ -14,6 +14,8 @@ spec:
       labels:
         app: nginx
     spec:
+      nodeSelector:
+        kubernetes.io/hostname: k8-manager-0
       schedulerName: custom-scheduler
       containers:
       - name: server
