--- a/k8_deployment/deployments/client-deployment.yml
+++ b/k8_deployment/deployments/client-deployment.yml
@@ -3,16 +3,16 @@ kind: Deployment
 metadata:
   name: client-deployment
   labels:
-    app: client-server-app
+    app: client
 spec:
-  replicas: 4
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: client
   template:
     metadata:
       labels:
-        app: nginx
+        app: client
     spec:
       schedulerName: custom-scheduler
       containers:
@@ -31,3 +31,20 @@ spec:
         
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: client-service
+spec:
+  selector:
+    app: client
+  ports:
+    - name: http
+      protocol: TCP
+      port: 80
+      targetPort: 80
+    - name: grpc
+      protocol: TCP
+      port: 5001
+      targetPort: 5001
