--- a/k8_deployment/deployments/client-deployment.yml
+++ b/k8_deployment/deployments/client-deployment.yml
@@ -28,9 +28,8 @@ spec:
           requests:
             cpu: "0.5"
             memory: "512Mi"
-        
         ports:
-        - containerPort: 80
+        - containerPort: 5001
 ---
 apiVersion: v1
 kind: Service
@@ -40,11 +39,7 @@ spec:
   selector:
     app: client
   ports:
-    - name: http
-      protocol: TCP
-      port: 80
-      targetPort: 80
-    - name: grpc
+    - name: iperf3
       protocol: TCP
       port: 5001
       targetPort: 5001
