--- a/k8_deployment/playbooks/k3s.yml
+++ b/k8_deployment/playbooks/k3s.yml
@@ -1,3 +1,11 @@
+- name: Set hostname
+  hosts: manager_group,worker_group
+  become: true
+  tasks:
+    - name: Set hostname
+      hostname:
+        name: "{{ inventory_hostname }}"
+
 - name: Install k3s manager
   hosts: manager_group
   tasks:
