--- a/k8_deployment/deployments/api_server.yml
+++ b/k8_deployment/deployments/api_server.yml
@@ -19,6 +19,8 @@ spec:
         image: harbor.uio.no/uio-ifi-ex-k8s-c/api_server:latest
         ports:
         - containerPort: 50051
+      nodeSelector: 
+        "kubernetes.io/hostname": "manager-0"
       imagePullSecrets:
       - name: regcred
     
