--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ k8_deployment/k3s.yaml
 api_server/target
 # dont check in the database
 api_server/database.db
+
+# no .dot, not .png. Not on my watch at least
+*.png
+*.dot
