--- a/k8_deployment/deployments/values-test.yml
+++ b/k8_deployment/deployments/values-test.yml
@@ -2,3 +2,11 @@ replicaCount: 1
 env:
   BANDWIDTH: "10" #in Mbit
   LATENCY: "15"
+
+server:
+  CPU: "3000m"
+  MEM: "1000Mi"
+
+client:
+  CPU: "3000m"
+  MEM: "1000Mi"
